feat: create project files
